# csound_tuning

./: .gitmodules  CMakeLists.txt  README.md
examples/: 19EDO.scl  launchpad.kbm  mtsesp.csd  scala.csd  tests.csd
src/: tuning.cpp
